@@ -1,1 +1,2 @@
-Xavier Claessens <xclaesse@gmail.com>
+Xavier Claessens
+Claudio Saavedra
